fix(layout): fixed layout overflow ui

--- a/src/App.less
+++ b/src/App.less
@@ -7,9 +7,8 @@
 body {
     font-family: "Sora", sans-serif;
     background: #12062B !important;
-    height: inherit;
   }
   
   .full-page {
-    height: calc(100vh - 88px);
+    height: 100vh;
   }
